Complete Proctice for Week1

--- a/Practice 8 week1.ipynb
+++ b/Practice 8 week1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 1,
    "id": "6e72c935-20bd-420d-bd22-35ac69551426",
    "metadata": {},
    "outputs": [
@@ -51,6 +51,103 @@
     "plt.ylabel('Age Group')\n",
     "plt.xlabel('Gender')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "db0e5e9e-68cf-416d-8be9-6522b2c1f2ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 데이터 결합 - pd.merge: 두 개의 데이터프레임에서 공통된 값을 가진 열(key)을 기준으로 데이터를 연결\n",
+    "# 1. Inner Join(내부 결합): 두 데이터프레임에 모두 존재하는 Key만 남김. * how='inner'(기본값)\n",
+    "# ex) pd.merge(df_users, df_purchases, how='inner', on='UserID')\n",
+    "\n",
+    "# 2. Left Join(왼쪽 결합): 왼쪽 데이터프레임을 기준으로, 모든 행을 유지하고 오른쪽에서 일치하는 데이터를 가져와 붙임. 일치하는 데이터가 없으면 그 자리는 NaN으로 표시됨. * how='left'\n",
+    "# ex) pd.merge(df_users, df_purchases, how='left', on=UserID')\n",
+    "\n",
+    "# 3. Right Join(오른쪽 결합): 오른쪽 데이터프레임을 기준으로 모든 행을 유지함. * how='right'\n",
+    "# ex) pd.merge(df_users, df_purchases, how='right', on='UserID')\n",
+    "\n",
+    "# 4. Outer Join(외부 결합): 어느 한쪽에라도 존재하는 모든 Key를 남김. * how='outer'\n",
+    "# ex) pd.merge(df_uers, df_purchases, how='outer', on=UserID)\n",
+    "\n",
+    "# 데이터 결합 - pd.concat: 여러 개의 데이터프레임을 위아래(수직) 또는 양옆(수평)으로 붙이는 기능. * merge처럼 공통된 Key를 찾지 않고, 지정한 축을 기준으로함.\n",
+    "# 컬럼 구조가 똑같은 여러 개의 파일을 하나로 합칠 때 사용됨\n",
+    "# 1. 위아래로 이어 붙이기(수직 결합) - axis=0(기본값)\n",
+    "# ex) pd.concat([df_ql, df_q2], ignore_index=True) * ignore_index=True - 인덱스를 0부터\n",
+    "\n",
+    "# 2. 양옆으로 이어 붙이기(수평 결합) - axis=1\n",
+    "# ex) pd.concat([df_left, df_right], axis=1)\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "# 데이터 1: 직원의 개인 정보\n",
+    "df_personal_info = pd.DataFrame({\n",
+    "    'EmployeeID': [101, 102, 103, 104, 105],\n",
+    "    'Name': ['Alice', 'Bob', 'Charlie', 'David', 'Eve'],\n",
+    "    'Hire_Date': ['2021-05-10', '2022-03-15', '2021-11-20', '2023-01-05', '2022-08-01']\n",
+    "})\n",
+    "\n",
+    "# 데이터 2: 직원의 업무 정보\n",
+    "df_work_info = pd.DataFrame({\n",
+    "    'EmployeeID': [101, 102, 104, 106],\n",
+    "    'Department': ['HR', 'Marketing', 'Engineering', 'Sales'],\n",
+    "    'Salary': [7000, 8500, 9500, 8800]\n",
+    "})\n",
+    "\n",
+    "active_employee = pd.merge(df_personal_info, df_work_info, how='inner', on='EmployeeID')\n",
+    "standard_personal = pd.merge(df_personal_info, df_work_info, how='left', on='EmployeeID')\n",
+    "\n",
+    "# 서울 본사 직원 명단\n",
+    "df_seoul = pd.DataFrame({\n",
+    "    'EmployeeID': [201, 202, 203],\n",
+    "    'Name': ['Frank', 'Grace', 'Henry'],\n",
+    "    'Team': ['Marketing_A', 'HR_B', 'Sales_A']\n",
+    "})\n",
+    "\n",
+    "# 부산 지사 직원 명단\n",
+    "df_busan = pd.DataFrame({\n",
+    "    'EmployeeID': [301, 302],\n",
+    "    'Name': ['Ivy', 'Jack'],\n",
+    "    'Team': ['Sales_B', 'Marketing_C']\n",
+    "})\n",
+    "\n",
+    "employee_list = pd.concat([df_seoul, df_busan], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a3f7e5d-b55b-40f6-8c18-18f024fa13a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 피벗 테이블(Pivot Table): 테이터를 원하는 행과 열을 기준으로 데이터를 재구성하고 요약함\n",
+    "# 구성 요소: index, colums, values, aggfunc(values를 어떤 방법으로 계산할지 정함)\n",
+    "# ex) df_cafe.pivot_table(index='Day_of_week', columns='Weather', values='Total_Sales', aggfunc='mean')\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "data = {\n",
+    "    'Game': ['Cosmic Odyssey', 'Soccer Pro 2025', 'Dragon Blade', 'Speed Demons', 'Kingdom of Valor', 'Gridiron Kings', 'Starfall Chronicles', 'Final Goal'],\n",
+    "    'Platform': ['PS5', 'Xbox', 'Switch', 'PS5', 'Switch', 'Xbox', 'PS5', 'Switch'],\n",
+    "    'Genre': ['RPG', 'Sports', 'RPG', 'Racing', 'RPG', 'Sports', 'RPG', 'Sports'],\n",
+    "    'Sales': [850, 920, 780, 650, 1150, 880, 950, 750] # 판매량 (만 달러)\n",
+    "}\n",
+    "df_games = pd.DataFrame(data)\n",
+    "\n",
+    "pivot_table = df_games.pivot_table(index='Genre',\n",
+    "                                   columns='Platform',\n",
+    "                                   values='Sales',\n",
+    "                                   aggfunc='sum'\n",
+    "                                  )\n",
+    "pivot_table2 = df_games.pivot_table(index='Genre',\n",
+    "                                   columns='Platform',\n",
+    "                                   values='Sales',\n",
+    "                                   aggfunc='mean'\n",
+    "                                  )"
    ]
   }
  ],
